# bitcoin-node

./: .gitignore  Cargo.toml  README.md  build.rs  log.txt  nodo.client.config  nodo.config  wallet.config
src/: config.rs  error.rs  lib.rs  logger.rs  merkle_tree.rs  utils.rs
src/net/: mod.rs  p2p_connection.rs  request.rs  response.rs  router.rs  server.rs
src/net/message/: block.rs  get_blocks.rs  get_data_inv.rs  get_headers.rs  get_tx_history.rs  get_utxo.rs  get_utxos.rs  mod.rs  ping_pong.rs  send_tx.rs  send_utxo.rs  tx.rs  tx_history.rs  tx_status.rs  utxos_msg.rs  version.rs
src/node/: block.rs  config.rs  handler.rs  main.rs  manager.rs  merkle_tree.rs  message.rs  mod.rs  network.rs  p2p_connection.rs  utxo.rs
src/node/message/: block.rs  blockHeader.rs  get_blocks.rs  get_data.rs  get_data_inv.rs  get_headers.rs  inv.rs  merkle_tree.rs  mod.rs  ping_pong.rs  tx.rs  version.rs
src/wallet/: config.rs  main.rs  mod.rs  org.gtk_rs.wallet-rustica.gschema.xml  python.md  wallet.config  wallet.rs
src/wallet/grid_cell/: imp.rs  mod.rs
src/wallet/resources/: grid_cell.ui  resources.gresource.xml  transaction_row.ui  window.ui
src/wallet/task_object/: mod.rs
src/wallet/task_row/: imp.rs
src/wallet/transaction_object/: imp.rs  mod.rs
src/wallet/transaction_row/: imp.rs  mod.rs
src/wallet/window/: imp.rs  mod.rs
tests/: integration_test.rs  node_integration_test.rs
