[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
bs58 = "0.4.0"
chrono = "0.4.24"
rand = "0.8.5"
secp256k1 = "0.27.0"

[[bin]]
name = "nodo-rustico"
path = "src/node/main.rs"

[[bin]]
name = "wallet-rustica"
path = "src/wallet/main.rs"
