[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
bs58 = {version = "0.4.0", features = ["check"]}
chrono = "0.4.24"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
rand = "0.8.5"
secp256k1 = {version = "0.27.0", features = ["global-context"]}

[[bin]]
name = "nodo-rustico"
path = "src/node/main.rs"

[[bin]]
name = "wallet-rustica"
path = "src/wallet/main.rs"

[build-dependencies]
glib-build-tools = "0.17.10"
